--- a/acceuil.html
+++ b/acceuil.html
@@ -11,7 +11,7 @@
       <button id="ba1" class="boutNorm"> é um profissional?</button>
 <div id="ellipse4">
       <img id="image2" src="imageAcceuil/logoProfil.png">
-      <a href="inscription_connexion.php" id="lien2">registo/login</a>
+      <a href="inscription_connexion.html" id="lien2">registo/login</a>
 </div>
       <img id="image1" src="imageAcceuil/logoSite.png">
 
@@ -25,7 +25,7 @@
   <form id="formAceuil">
 <input type="text" id="recherche1" placeholder="nome,estabelecimento" required/>
 <input type="text" id="loc" placeholder="localização" required/>
-<select id="dropdown">
+<select id="dropdown1">
    <option value="">especialidade</option>
    <option value="option1">Medicina convencional</option>
    <option value="option2">Veterinário</option>
