--- a/acceuil.html
+++ b/acceuil.html
@@ -17,12 +17,12 @@
 
     </header>
 
-<p id="p1">Um Professional de Saude sempre ha mao e mais perto de si</p>
+<p id="p1">Um Professional de Saude sempre ha <br><br>Mao e mais perto de si</p>
 <p id=p2>“Cuide de sua saude e de quem ama,em dois cliques”</p>
 <img id="rectangle6" src="imageAcceuil/rectangle6.png">
 
 <div id="barRecherche">
-  <form id="formAceuil">
+  <form id="formAceuil" method="post">
 <input type="text" id="recherche1" placeholder="nome,estabelecimento" required/>
 <input type="text" id="loc" placeholder="localização" required/>
 <select id="dropdown1">
@@ -31,12 +31,12 @@
    <option value="option2">Veterinário</option>
    <option value="option3">Medicina alternativa</option>
  </select>
-<button>Filtro</button>
-<img id="recherche" src="imageAcceuil/recherche.png">
+<button id="filtre1">Filtro</button>
+<input type="image" id="recherche" src="imageAcceuil/recherche.png">
 </form>
 </div>
 
-
+<br>
 
 <div id="ellipse5">
 <p id="p3">“Por video-chamada <br>
@@ -44,6 +44,8 @@ ou<br>
  consultorio”</p>
 </div>
 
+
+<br>
 <img id="image6" src="imageAcceuil/image6.png">
 
 <div id="ellipse9"
