--- a/inscription_connexion.html
+++ b/inscription_connexion.html
@@ -10,7 +10,7 @@
     </header>
 
     <div id="rectangle18">
-      <label class="title1 id="label1">Já tenho uma conta Saudeasy
+      <label class="title1" id="label1">Já tenho uma conta Saudeasy
       <form id="connexion" method="post">
         <label>endereço de correio electrónico ou telefone *
         <input type="text"></label>
