--- a/acceuil.html
+++ b/acceuil.html
@@ -50,10 +50,12 @@ ou<br>
 
 <div id="ellipse9"
  <p id=p4>Teleconsulta sem marcação</p>
- <img id="ellipse10" src="imageAcceuil/ellipse10.png">
+ <img id="ellipse10" src="imageAcceuil/ellipse10.png"
+                      width="200">
 </div>
 
-<img id="image22" src="imageAcceuil/image22.png">
+<img id="image22" src="imageAcceuil/image22.png"
+                  width="300">
 
 <div id="rectangle8">
 <img id="ellipse7" src="imageAcceuil/ellipse7.png">
@@ -78,10 +80,10 @@ ou<br>
 <img id="imageBG" src="imageAcceuil/imageBG.png">
 
 
-
+<!--
 <button id"ba5">CTA</button>
 
-
+-->
 
 <!--code carroussel
 
