--- a/acceuil.html
+++ b/acceuil.html
@@ -48,7 +48,7 @@ ou<br>
 <br>
 <img id="image6" src="imageAcceuil/image6.png">
 
-<div id="ellipse9"
+<div id="ellipse9">
  <p id=p4>Teleconsulta sem marcação</p>
  <img id="ellipse10" src="imageAcceuil/ellipse10.png"
                       width="200">
@@ -59,17 +59,17 @@ ou<br>
 
 <div id="rectangle8">
 <img id="ellipse7" src="imageAcceuil/ellipse7.png">
-<button id="ba3" class="boutOption"><a href="medicina_convencional.php">medicina <br>convencional</a></button>
+<button id="ba3" class="boutOption"><a href="medicina_convencional.php" class="lien4">medicina <br>convencional</a></button>
 </div>
 
-<div id="rectangle9"
-<img id="image18" src="imageAcceuil/image18.png">
-<button id="ba4" class="boutOption"><a href="veterinário.php">veterinário</a></button>
+<div id="rectangle9">
+<img id="image18" src="imageAcceuil/image18.png" width="100">
+<button id="ba4" class="boutOption"><a href="veterinário.php" class="lien4">veterinário</a></button>
 </div>
 
 <div id="rectangle7">
 <img id="ellipse6" src="imageAcceuil/ellipse6.png">
-<button id="ba5" class="boutOption"><a href="medicina_alternativa.php">medicina <br>alternativa</a></button>
+<button id="ba5" class="boutOption"><a class="lien4" href="medicina_alternativa.php">medicina <br>alternativa</a></button>
 </div>
 
 
