--- a/inscription_connexion.html
+++ b/inscription_connexion.html
@@ -2,11 +2,13 @@
 <html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>registo/login</title>
   </head>
   <body>
     <header>
-
+<button id="ba1" class="boutNorm"> é um profissional?</button>
+<a href="acceuil.html"><img id="image9" src="imageAcceuil/image9.png"></a>
     </header>
 
     <div id="rectangle18">
@@ -28,6 +30,7 @@
 
 <div class="rectangle19">
   <label>Criar uma conta saudeasy	</label>
+
   <form id="inscription" action="submit">
 
 <label>Nome*<br><input type="text"></label>
@@ -48,8 +51,16 @@
 <select id="dropdown2">
   escolha o seu Seguro de Saùde
  </select>
+ <br>
+<label><input type="image" id="ajouter" src="imageAcceuil/image14.png">adicionar uma pessoa</label>
+<br>
+<label><input type="image" id="ajouter" src="imageAcceuil/image14.png">adicionar um animal de estimação</label>
+<br>
+<label><input type="checkbox" >Recordar o meu login</label><br>
+<label><input type="checkbox" >Aceitar as condições</label><br>
+<label><input type="checkbox" >Subscrever ao newsletter</label><br>
 
-
+<input type="submit" value="Registro">
   </form>
 </div>
 
