--- a/acceuil.html
+++ b/acceuil.html
@@ -17,8 +17,8 @@
 
     </header>
 
-<p id="p1">Um Professional de Saude sempre ha <br><br>Mao e mais perto de si</p>
-<p id=p2>“Cuide de sua saude e de quem ama,em dois cliques”</p>
+<h1 id="p1">Um Professional de Saude sempre ha <br><br>Mao e mais perto de si</h1>
+<h2 id=p2>“Cuide de sua saude e de quem ama,em dois cliques”</h2>
 <img id="rectangle6" src="imageAcceuil/rectangle6.png">
 
 <div id="barRecherche">
@@ -39,9 +39,9 @@
 <br>
 
 <div id="ellipse5">
-<p id="p3">“Por video-chamada <br>
+<h2 id="p3">“Por video-chamada <br>
 ou<br>
- consultorio”</p>
+ consultorio”</h2>
 </div>
 
 
@@ -49,7 +49,7 @@ ou<br>
 <img id="image6" src="imageAcceuil/image6.png">
 
 <div id="ellipse9">
- <p id=p4>Teleconsulta sem marcação</p>
+ <h2 id=p4>Teleconsulta sem marcação</h2>
  <img id="ellipse10" src="imageAcceuil/ellipse10.png"
                       width="200">
 </div>
