--- a/acceuil.html
+++ b/acceuil.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <header>
+  <img id="rectangle6" src="imageAcceuil/rectangle6.png">
+      <button id="ba1" class="boutNorm"> E UM PROFESSIONAL?</button>
 
-      <button id="ba1" class="boutNorm"> é um profissional?</button>
-<div id="ellipse4">
       <img id="image2" src="imageAcceuil/logoProfil.png">
-      <a href="inscription_connexion.html" id="lien2">registo/login</a>
-</div>
+      <a href="inscription_connexion.html" id="lien2">REGISTRO<br><br>Login</a>
+
       <img id="image1" src="imageAcceuil/logoSite.png">
 
     </header>
 
-<h1 id="p1">Um Professional de Saude sempre ha <br><br>Mao e mais perto de si</h1>
-<h2 id=p2>“Cuide de sua saude e de quem ama,em dois cliques”</h2>
-<img id="rectangle6" src="imageAcceuil/rectangle6.png">
+<h1 id="p1">Um Professional de Saude sempre ha Mao <br><br><br>e mais perto de si</h1>
+<!-- <h2 id=p2>“Cuide de sua saude e de quem ama,em dois cliques”</h2> -->
+
 
 <div id="barRecherche">
   <form id="formAceuil" method="post">
