--- a/inscription_connexion.html
+++ b/inscription_connexion.html
@@ -36,16 +36,16 @@
     </div>
 
 
-<div class="rectangle19">
-  <label>Criar uma conta saudeasy	</label>
+<div id="rectangle19">
+  <label class="title1">Criar uma conta saudeasy	</label>
 
   <form id="inscription" action="submit">
 
-<label>Nome*<br><input type="text"></label>
-<label>Sobrenome*<br><input type="text"></label><br>
-<label>Data de nascimento*<br><input type="date"></label>
-<label>E-mail*<br><input type="email"></label>
-<label> Telefone*<br><input type="number" maxlength="10"></label>
+<label>Nome*<br><input type="text"  class="textarea"></label>
+<label>Sobrenome*<br><input type="text"  class="textarea"></label><br>
+<label>Data de nascimento*<br><input type="date"  class="textarea"></label>
+<label>E-mail*<br><input type="email"  class="textarea"></label>
+<label> Telefone*<br><input type="number" maxlength="10"  class="textarea"></label>
 <label>Língua<br><select id="dropdown2">
    <option value="">Português</option>
    <option value="option1">Espanhol</option>
