--- a/acceuil.html
+++ b/acceuil.html
@@ -17,7 +17,7 @@
 
     </header>
 
-<h1 id="p1">Um Professional de Saude sempre ha Mao <br><br><br>e mais perto de si</h1>
+<h1 id="p1">Um Profissional de saúde sempre há mão<br><br>e mais perto de si.</h1>
 <!-- <h2 id=p2>“Cuide de sua saude e de quem ama,em dois cliques”</h2> -->
 
 
