--- a/acceuil.html
+++ b/acceuil.html
@@ -23,10 +23,10 @@
 
 <div id="barRecherche">
   <form id="formAceuil" method="post">
-<input type="text" id="recherche1" placeholder="nome,estabelecimento" required/>
-<input type="text" id="loc" placeholder="localização" required/>
+<input type="text" id="recherche1" placeholder="Nome,Estabelecimento" required/>
+<input type="text" id="loc" placeholder="Localização" required/>
 <select id="dropdown1">
-   <option value="">especialidade</option>
+   <option value="">Especialidade</option>
    <option value="option1">Medicina convencional</option>
    <option value="option2">Veterinário</option>
    <option value="option3">Medicina alternativa</option>
@@ -59,17 +59,17 @@ ou<br>
 
 <div id="rectangle8">
 <img id="ellipse7" src="imageAcceuil/ellipse7.png">
-<button id="ba3" class="boutOption"><a href="medicina_convencional.php" class="lien4">medicina <br>convencional</a></button>
+<button id="ba3" class="boutOption"><a href="medicina_convencional.php" class="lien4">Medicina <br>convencional</a></button>
 </div>
 
 <div id="rectangle9">
 <img id="image18" src="imageAcceuil/image18.png" width="100">
-<button id="ba4" class="boutOption"><a href="veterinário.php" class="lien4">veterinário</a></button>
+<button id="ba4" class="boutOption"><a href="veterinário.php" class="lien4">Veterinário</a></button>
 </div>
 
 <div id="rectangle7">
 <img id="ellipse6" src="imageAcceuil/ellipse6.png">
-<button id="ba5" class="boutOption"><a class="lien4" href="medicina_alternativa.php">medicina <br>alternativa</a></button>
+<button id="ba5" class="boutOption"><a class="lien4" href="medicina_alternativa.php">Medicina <br>alternativa</a></button>
 </div>
 
 
