--- a/acceuil.html
+++ b/acceuil.html
@@ -46,7 +46,7 @@ ou<br>
 
 
 <br>
-<img id="image6" src="imageAcceuil/image6.png">
+<img id="image6" src="imageAcceuil/Image6.png">
 
 <div id="ellipse9">
  <h2 id=p4>Teleconsulta sem marcação</h2>
