--- a/inscription_connexion.html
+++ b/inscription_connexion.html
@@ -8,9 +8,9 @@
   <body id="bodyinscription_connexion">
     <header id="headerLogin">
 <button id="bi1" class="boutNorm"> E um profissional?</button>
-<a href="acceuil.html" id="lien9"><img id="image9" src="https://raw.githubusercontent.com/Maryam9242/Maryam9242.github.io/main/imageAcceuil/image9.png" width="50"></a>
+<a href="acceuil.html" id="lien9"><img id="image9" src="imageAcceuil/Image9.png" width="50"></a>
     </header>
-<img src="imageAcceuil/image11.png" id="image11">
+<img src="imageAcceuil/image11.png" id="Image11">
     <div id="rectangle18">
       <div id="login">
       <form id="connexion" method="post">
@@ -34,7 +34,7 @@
 
 </div>
     </div>
-<img src="imageAcceuil/image13.png" id="image13">
+<img src="imageAcceuil/Image13.png" id="image13">
 
 <div id="rectangle19">
   <div id="registro">
@@ -77,10 +77,10 @@
  </select>
  <br>
  <br>
-<label class="textelogin"><input type="image" class="ajouter" src="imageAcceuil/image15.png" width="5%" id="ajouterBtnPersonne"> Adicionar uma pessoa</label>
+<label class="textelogin"><input type="image" class="ajouter" src="imageAcceuil/Image15.png" width="5%" id="ajouterBtnPersonne"> Adicionar uma pessoa</label>
 <br><div id="formContainerPersonne"></div>
 <br>
-<label class="textelogin"><input type="image" class="ajouter" src="imageAcceuil/image15.png" width="5%" id="ajouterBtnAnimal"> Adicionar um animal de estimação</label>
+<label class="textelogin"><input type="image" class="ajouter" src="imageAcceuil/Image15.png" width="5%" id="ajouterBtnAnimal"> Adicionar um animal de estimação</label>
 <br><div id="formContainerAnimal"></div>
 <br>
 <label class="textelogin"><input type="checkbox" >Recordar o meu login</label><br>
@@ -178,7 +178,7 @@ var formCountAnimal = 0;
 </script>
 
 
-<img src="imageAcceuil/image12.png" id="image12">
+<img src="imageAcceuil/Image12.png" id="image12">
 <footer id="inscriptionConnexion"><a href="aviso_legal.php" id="liensAvisLegal"> aviso legal</a>
 <a href="contactar.php" id="lienContact">contactar</a>
 <a href="reseaux.php" id="lienReseaux">redes sociais</a></footer>
