--- a/gestion_rdv.html
+++ b/gestion_rdv.html
@@ -9,9 +9,9 @@
 
 <header class="headerPersonne">
 <a href="acceuil.html" id="lien9"><img  src="imageAcceuil/Image9.png" width="50"></a>
-<h1>As minhas marcação</h1>
+<h1  class="title2">As minhas marcação</h1>
 <a href="messagerie.html"><img src="imageAcceuil/msg.png"  width='50' alt=""></a>
-<a href="document.html>"<img src="imageAcceuil/doc.png"  width='50' alt=""></a>
+<a href="document.html"><img src="imageAcceuil/doc.png"  width='50' alt=""></a>
 <img src="imageAcceuil/profil.png"  width='50' alt="">
 
 </header>
